{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 43,
  "lineage": "b40da120-f079-ab2c-0c61-d81c340d4731",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0776ded2fb013bfb3",
            "domain": "vpc",
            "id": "eipalloc-05f74a6a8da07d19c",
            "network_interface": "eni-0c60c1121e67126ab",
            "private_dns": "ip-10-0-1-177.ec2.internal",
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-52-22-57-250.compute-1.amazonaws.com",
            "public_ip": "52.22.57.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-eip-ngw-a"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e0ad773265fb5dc8",
            "domain": "vpc",
            "id": "eipalloc-06dd292d681898fd3",
            "network_interface": "eni-0267c7553374c3953",
            "private_dns": "ip-10-0-2-76.ec2.internal",
            "private_ip": "10.0.2.76",
            "public_dns": "ec2-35-169-155-201.compute-1.amazonaws.com",
            "public_ip": "35.169.155.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-eip-ngw-b"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03ef61ddbf0107ff4",
            "domain": "vpc",
            "id": "eipalloc-0327e115fa79d75ac",
            "network_interface": "eni-0bc469da4c20a5dcf",
            "private_dns": "ip-10-0-3-12.ec2.internal",
            "private_ip": "10.0.3.12",
            "public_dns": "ec2-52-86-90-148.compute-1.amazonaws.com",
            "public_ip": "52.86.90.148",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-eip-ngw-c"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-042075f007b0d7a89",
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-igw"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f74a6a8da07d19c",
            "id": "nat-07b1222688b583f97",
            "network_interface_id": "eni-0c60c1121e67126ab",
            "private_ip": "10.0.1.177",
            "public_ip": "52.22.57.250",
            "subnet_id": "subnet-01f7b35e1ef797035",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-ngw-public-a"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat-a",
            "aws_internet_gateway.igw",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06dd292d681898fd3",
            "id": "nat-0e100dbcf52a0ad76",
            "network_interface_id": "eni-0267c7553374c3953",
            "private_ip": "10.0.2.76",
            "public_ip": "35.169.155.201",
            "subnet_id": "subnet-00562ab8e52792f56",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-ngw-public-b"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat-b",
            "aws_internet_gateway.igw",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-private-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0327e115fa79d75ac",
            "id": "nat-0da476911c1903a3f",
            "network_interface_id": "eni-0bc469da4c20a5dcf",
            "private_ip": "10.0.3.12",
            "public_ip": "52.86.90.148",
            "subnet_id": "subnet-08c0fc4b3818b1204",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-ngw-public-c"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat-c",
            "aws_internet_gateway.igw",
            "aws_subnet.public-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eb05010f13f6c54f",
            "owner_id": "411395035331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-07b1222688b583f97",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-rtb-private-a"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_eip.eip-nat-a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw-private-a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-022e3b23954f13b76",
            "owner_id": "411395035331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e100dbcf52a0ad76",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-rtb-private-b"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_eip.eip-nat-b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw-private-b",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a9988f39728bcd82",
            "owner_id": "411395035331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0da476911c1903a3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-rtb-private-c"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_eip.eip-nat-c",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw-private-c",
            "aws_subnet.public-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e440adf80935bb21",
            "owner_id": "411395035331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042075f007b0d7a89",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-rtb-public"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cabd835731c269d",
            "route_table_id": "rtb-0eb05010f13f6c54f",
            "subnet_id": "subnet-025c120a68930836c"
          },
          "dependencies": [
            "aws_route_table.rtb-private-a",
            "aws_subnet.private-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096fecaeaf9dcc447",
            "route_table_id": "rtb-022e3b23954f13b76",
            "subnet_id": "subnet-09dfbd9cfdf5f70a6"
          },
          "dependencies": [
            "aws_route_table.rtb-private-b",
            "aws_subnet.private-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09941d3ae8a3db32c",
            "route_table_id": "rtb-0a9988f39728bcd82",
            "subnet_id": "subnet-005458844f7427ad0"
          },
          "dependencies": [
            "aws_route_table.rtb-private-c",
            "aws_subnet.private-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08359f979ea7e9512",
            "route_table_id": "rtb-0e440adf80935bb21",
            "subnet_id": "subnet-01f7b35e1ef797035"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb-public",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039d9d88a54bc0ad0",
            "route_table_id": "rtb-0e440adf80935bb21",
            "subnet_id": "subnet-00562ab8e52792f56"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb-public",
            "aws_subnet.public-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030b8b7cedaef0ac0",
            "route_table_id": "rtb-0e440adf80935bb21",
            "subnet_id": "subnet-08c0fc4b3818b1204"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb-public",
            "aws_subnet.public-c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-08643a4765a935a53",
            "description": "Allow HTTP inbound traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08643a4765a935a53",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTP inbound traffic from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-allow-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-0d1ab5aaaf56f355c",
            "description": "Allow HTTPS inbound traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1ab5aaaf56f355c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS inbound traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-https",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-allow-https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_rdp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-0dd24ea5b0c69bb98",
            "description": "Allow RDP inbound traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd24ea5b0c69bb98",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow RDP inbound traffic from VPC",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "allow-rdp",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-allow-rdp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-0db136221bd1217e0",
            "description": "Allow SSH inbound traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db136221bd1217e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow SSH inbound traffic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-025c120a68930836c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-025c120a68930836c",
            "map_public_ip_on_launch": false,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-private-a"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-09dfbd9cfdf5f70a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-09dfbd9cfdf5f70a6",
            "map_public_ip_on_launch": false,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-private-b"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-005458844f7427ad0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-005458844f7427ad0",
            "map_public_ip_on_launch": false,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-private-c"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-01f7b35e1ef797035",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01f7b35e1ef797035",
            "map_public_ip_on_launch": true,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-public-a"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-00562ab8e52792f56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00562ab8e52792f56",
            "map_public_ip_on_launch": true,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-public-b"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-08c0fc4b3818b1204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08c0fc4b3818b1204",
            "map_public_ip_on_launch": true,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-public-c"
            },
            "vpc_id": "vpc-0694f7b943c579f3d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:vpc/vpc-0694f7b943c579f3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d31fc46bf67e95e",
            "default_route_table_id": "rtb-03f44379cce8f608d",
            "default_security_group_id": "sg-07dedc7573f973736",
            "dhcp_options_id": "dopt-8f56eaf5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0694f7b943c579f3d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03f44379cce8f608d",
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d-vpc"
            }
          }
        }
      ]
    }
  ]
}